# knowrithm-cli

./: .gitignore  AGENT_CHAT_GUIDE.md  AGENT_TEST_ENHANCEMENT.md  API_ENDPOINTS.md  BACKEND_ISSUE_HUGGINGFACE_API_KEY.md  BUGFIX_API_RESPONSE_FORMAT.md  COMMAND_REFERENCE.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  GEOGRAPHIC_COMMANDS_GUIDE.md  GEOGRAPHIC_MENU_ENHANCEMENT.md  IMPLEMENTATION_PLAN.md  INTERACTIVE_FEATURES.md  INTERACTIVE_IMPLEMENTATION.md  MIGRATION_GUIDE.md  PYTHON_SDK_EXAMPLES.md  QUICK_FIX_HUGGINGFACE.md  QUICK_REFERENCE.md  QUICK_REF_AGENT_TEST.md  QUICK_START.md  QUICK_START_INTERACTIVE.md  README.md  SESSION_SUMMARY.md  USER_GUIDE.md  apispec_1.json  docs.json  pyproject.toml  requirements.txt  test_interactive.py
knowrithm_cli/: __init__.py  cli.py  client.py  config.py  interactive.py  shell.py  utils.py
knowrithm_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
knowrithm_cli/commands/: __init__.py  admin.py  agent.py  analytics.py  auth.py  common.py  company.py  config_cmd.py  context_cmd.py  conversation.py  dashboard.py  database.py  document.py  lead.py  settings.py  system.py  website.py
knowrithm_cli/core/: __init__.py  context.py  formatters.py  name_resolver.py
