[project]
name = "knowrithm-cli"
version = "0.1.0"
description = "Command line interface for the Knowrithm enterprise multi-agent platform."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
knowrithm = "knowrithm_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
