[project]
name = "knowrithm-cli"
version = "0.1.0"
description = "Command line interface for the Knowrithm enterprise multi-agent platform."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "prompt_toolkit>=3.0.0",
    "questionary>=2.0.0",
]

[project.scripts]
knowrithm = "knowrithm_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
